syntax = "proto3";

package com.example.internal.input.reqreply.order;

import "com/example/internal/commonmodels/error.proto";
import "com/example/internal/commonmodels/order/order.proto";

option java_multiple_files = true;

message FindOrdersByUserIdRequest {
    string id = 1;
}

message FindOrdersByUserIdResponse {
    oneof response {
        Success success = 1;
        Failure failure = 2;
    }

    message Success {
        repeated commonmodels.order.Order order = 1;
    }

    message Failure {
        string message = 100;
        oneof error {
            commonmodels.Error user_not_found = 1;
        }
    }
}
